# redsky

./: Cargo.toml  README.md  build.rs  fix_errors.py  fix_errors2.py  fix_mock_and_ui.py  get_bookmarks_fixed.txt  get_egui_viewport_cmd.rs  patch_actor.py  patch_bskymod.py  patch_handlers.py  patch_likers_cache.py  patch_main.diff  patch_mock.py  patch_msg_handler.diff  patch_msg_handler.py  patch_new.diff  patch_notifs_cursors.py  patch_notifs_ui.py  patch_settings.py  patch_types.py  patch_types2.py  patch_warning.py  patch_widgets_cursor.py  run_patches.sh  test_serde.rs
.Jules/: palette.md
.github/workflows/: build.yml  release.yml  screenshot.yml
.jules/: bolt.md
resources/: redsky.icns
src/: app.rs  bsky_actor.rs  main.rs  updater.rs
src/app/: mod.rs  msg_handler.rs  screenshot_state.rs  types.rs  ui_post.rs  ui_settings.rs  ui_thread.rs  ui_user.rs  ui_widgets.rs
src/bsky_actor/: actor_methods.rs  actor_methods_mock.rs  mod.rs
