[package]
name = "redsky"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.25.0"
bsky-sdk = "0.1.16"
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image", "svg"] }
image = { version = "0.25.5", features = ["jpeg", "png", "webp", "gif"] } 
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
    "wgpu",         
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true 
opt-level = "z"

